[gd_scene load_steps=2 format=3 uid="uid://wbh1ar2ktxkv"]

[ext_resource type="Script" path="res://scripts/managers/enemy-spawner.gd" id="1_ljqxe"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_ljqxe")
spawnPositions = [Vector2(1920, 346), Vector2(1920, 612), Vector2(1920, 878)]

[node name="ForestSpiritTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="FlyingEyeBallTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="GoblinTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="BansheeTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="CrowTimer" type="Timer" parent="."]
wait_time = 16.0
autostart = true

[connection signal="timeout" from="ForestSpiritTimer" to="." method="_on_forest_spirit_timer_timeout"]
[connection signal="timeout" from="FlyingEyeBallTimer" to="." method="_on_flying_eye_ball_timer_timeout"]
[connection signal="timeout" from="GoblinTimer" to="." method="_on_goblin_timer_timeout"]
[connection signal="timeout" from="BansheeTimer" to="." method="_on_banshee_timer_timeout"]
[connection signal="timeout" from="CrowTimer" to="." method="_on_crow_timer_timeout"]
